<resources>
    <string name="app_name">DriversEd</string>
    <string name="lesson">New Lesson</string>
    <string name="log">Driving Log</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_closed">Closed</string>
    <string name="drive">Drive Lesson</string>
    <string name="action_settings">Settings</string>
    <string name="action_new_lesson">Add</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="residential">Residential</string>
    <string name="commercial">Commercial</string>
    <string name="highway">Highway</string>
    <string name="clear">Clear</string>
    <string name="rainy">Rainy</string>
    <string name="snow">Snow/Ice</string>
    <string name="total">Total</string>
    <string name="date">Date:</string>
    <string name="hours">Hours:</string>
    <string name="lesson_type">Lesson Type:</string>
    <string name="weather_condition">Weather Condition:</string>
    <string name="total_hours">Total Hours:</string>
    <string name="day_night_hours">Day/Night Hours:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>
