<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.khochberg.driversed.NewLessonFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/start"
            android:id="@+id/start_button"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorAccent"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/stop"
            android:layout_weight="1"
            android:id="@+id/stop_button"
            android:background="@color/red"
            android:textColor="@color/dark_red"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/date_label"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center_vertical"
            android:text="@string/date"
            android:textSize="20sp"
            android:layout_weight="3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/date"
            android:text="current_date"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="39dp"
            android:layout_height="42dp"
            app:srcCompat="@drawable/calendar"
            android:id="@+id/date_picker" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hours_label"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:text="@string/hours"
            android:layout_weight="4" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hours"
            android:text="num_hours"
            android:textStyle="normal"
            android:background="@null"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:layout_weight="1"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radio_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center">

        <RadioButton android:id="@+id/day_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="100dp"
            android:textSize="20sp"
            android:text="@string/day" />

        <RadioButton android:id="@+id/night_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/night"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"/>

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:id="@+id/lesson_type_label"
        android:text="@string/lesson_type"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:id="@+id/lesson_spinner" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:id="@+id/weather_condition_label"
        android:text="@string/weather_condition"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:id="@+id/weather_spinner" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/save"
            android:id="@+id/save_button"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorAccent"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:id="@+id/cancel_button"
            android:background="@color/red"
            android:textColor="@color/dark_red"/>

    </LinearLayout>

</LinearLayout>
