<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.khochberg.driversed.StatisticsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/total_hours_label"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        android:text="@string/total_hours"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/total_hours"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="2dp"
            android:text="0/20 total hours trained"/>

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="20dp"
            android:maxHeight="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/total_progress"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/day_night_hours_label"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        android:text="@string/day_night_hours"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/yellow"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/day_hours"
                android:gravity="center"
                android:textColor="@color/dark_yellow"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="2dp"
                android:text="Day: 0/10 hours"/>

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="20dp"
                android:maxHeight="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="4dp"
                android:id="@+id/day_progress"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/purple"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/night_hours"
                android:gravity="center"
                android:textColor="@color/dark_purple"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="2dp"
                android:text="Night: 0/10 hours"/>

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="20dp"
                android:maxHeight="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="4dp"
                android:id="@+id/night_progress"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lesson_hours_label"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        android:text="@string/lesson_type"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/blue">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/residential_hours"
            android:gravity="center"
            android:textColor="@color/dark_blue"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="2dp"
            android:text="Residential: 4/8 hours"/>

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="20dp"
            android:maxHeight="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="1dp"
            android:id="@+id/residential_progress"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/highway_hours"
            android:gravity="center"
            android:textColor="@color/dark_blue"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="2dp"
            android:text="Highway: 6/7 hours"/>

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="20dp"
            android:maxHeight="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="1dp"
            android:id="@+id/highway_progress"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/commercial_hours"
            android:gravity="center"
            android:textColor="@color/dark_blue"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="2dp"
            android:text="Commercial: 1/5 hours"/>

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="20dp"
            android:maxHeight="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/commercial_progress"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/weather_hours_label"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        android:text="@string/weather_condition"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/blue">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clear_hours"
            android:gravity="center"
            android:textColor="@color/dark_blue"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="2dp"
            android:text="Clear: 7/8 hours"/>

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="20dp"
            android:maxHeight="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="1dp"
            android:id="@+id/clear_progress"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rain_hours"
            android:gravity="center"
            android:textColor="@color/dark_blue"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="2dp"
            android:text="Rainy: 3/10 hours"/>

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="20dp"
            android:maxHeight="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="1dp"
            android:id="@+id/rain_progress"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/snow_hours"
            android:gravity="center"
            android:textColor="@color/dark_blue"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="2dp"
            android:text="Snow/Ice: 1/2 hours"/>

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="20dp"
            android:maxHeight="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/snow_progress"/>

    </LinearLayout>

</LinearLayout>
